syntax = "proto3";

package order;

option go_package = "./";

service OrderService {
    rpc PlaceOrder (OrderRequest) returns (OrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
    rpc GetOrderHistory (OrderHistoryRequest) returns (OrderHistoryResponse);
    rpc GetCurrentPrice(GetCurrentPriceRequest)returns (GetCurrentPriceResponse);
}

message Order {
    string orderId = 1;
    string symbol = 2;
    int32 quantity = 3;
    double pricePerStock = 4;
    double totalPrice = 5;
    string orderType = 6;
    string orderStatus = 7;
}

message OrderRequest{
    string symbol = 1;
    int32 quantity = 2;
    string orderType = 3;
}

message OrderResponse{
    Order order = 1;
    Response response = 2;
}

message CancelOrderRequest{
    string orderId = 1;
}

message CancelOrderResponse{
    Order order = 1;
    Response response = 2;
}

message OrderHistoryRequest {
}

message OrderHistoryResponse{
    repeated Order orders = 1;
    Response response = 2;
}

message GetCurrentPriceRequest{
    string symbol = 1;
}

message GetCurrentPriceResponse{
    double price = 1;
    Response response = 2;
}

message Response {
    int64 code = 1;
    string message = 2;
}